[package]
name = "bindash"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "One Permutation Hashing, Optimal Densification, Genomics"

[dependencies]
clap = "4.3"
needletail = "0.5.1"
rayon = "1.5"
kmerutils = { version = "=0.0.12", features = ["simdeez_f"]}
anndists = { version = "0.1.2", features = ["simdeez_f"] }
num = { version = "0.4" }
env_logger = { version = "0.11" }
