[package]
name = "bindash"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "One Permutation Hashing, Optimal Densification, Genomics"


[[bin]]

name = "dartunifrac-cuda"
path = "src/main.rs"

[dependencies]
clap = "4.3"
needletail = "0.6.0"
rayon = "1.5"
# kmerutils = { version = "0.0.14", features = ["stdsimd"]}
kmerutils = { git = "https://github.com/jianshu93/kmerutils" }
# anndists = { version = "0.1.3", features = ["stdsimd"] }
anndists = { git = "https://github.com/jianshu93/anndists", features = ["stdsimd"] }
num = { version = "0.4" }

log = "0.4"
anyhow = "1"
env_logger = { version = "0.11" }
cudarc = { version = "0.18.1", features = [
    "driver",
    "nvrtc",
    "cuda-version-from-build-system"], optional = true }

[features]
default = []
cuda = ["dep:cudarc"]